// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateFormField - staticSelect > should generate readonly staticSelect 1`] = `
"<SelectField
                            
                             fullWidth
                                variant={"horizontal"}
                                name="type"
                                label={<FormattedMessage id="product.type" defaultMessage="Type" />}
                                
                                
                                
                                readOnly disabled endAdornment={<InputAdornment position="end"><Lock /></InputAdornment>}
                                
                                options={[{
                                        value: "cap",
                                        label: <FormattedMessage id="product.type.cap" defaultMessage="Cap" />
                                    },{
                                        value: "shirt",
                                        label: <FormattedMessage id="product.type.shirt" defaultMessage="Shirt" />
                                    },{
                                        value: "tie",
                                        label: <FormattedMessage id="product.type.tie" defaultMessage="Tie" />
                                    }]}
                            />"
`;

exports[`generateFormField - staticSelect > should generate simple staticSelect 1`] = `
"<RadioGroupField
             required
              variant="horizontal"
             fullWidth
             name="type"
             label={<FormattedMessage id="product.type" defaultMessage="Type" />}
             options={[
                  {
                                label: <FormattedMessage id="product.type.cap" defaultMessage="Cap" />,
                                value: "cap",
                            },{
                                label: <FormattedMessage id="product.type.shirt" defaultMessage="Shirt" />,
                                value: "shirt",
                            },{
                                label: <FormattedMessage id="product.type.tie" defaultMessage="Tie" />,
                                value: "tie",
                            }
            ]}/>"
`;

exports[`generateFormField - staticSelect > should generate staticSelect with nested field 1`] = `
"<RadioGroupField
             required
              variant="horizontal"
             fullWidth
             name="product.type"
             label={<FormattedMessage id="productHighlight.product.type" defaultMessage="Product Type" />}
             options={[
                  {
                                label: <FormattedMessage id="productHighlight.product.type.cap" defaultMessage="Cap" />,
                                value: "cap",
                            },{
                                label: <FormattedMessage id="productHighlight.product.type.shirt" defaultMessage="Shirt" />,
                                value: "shirt",
                            },{
                                label: <FormattedMessage id="productHighlight.product.type.tie" defaultMessage="Tie" />,
                                value: "tie",
                            }
            ]}/>"
`;
